# textRPG

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: .property.h.kate-swp  condition.h  constantProperty.h  inventory.h  inventoryCell.h  item.h  itemStack.h  itemType.h  passage.h  player.h  property.h  room.h  roomObject.h  statusCodes.h
include/dinamicProperty/: dinamicProperty.h  dinamicPropertyType.h
include/items/: inventory.h  itemStack.h  itemType.h
include/language/: language.h  localizedString.h  multiLocalizedString.h
src/: condition.cpp  constantProperty.cpp  inventory.cpp  inventoryCell.cpp  item.cpp  itemStack.cpp  itemType.cpp  passage.cpp  player.cpp  room.cpp  roomObject.cpp  statusCodes.cpp
src/dinamicProperty/: dinamicProperty.cpp  dinamicPropertyType.cpp
src/items/: inventory.cpp  itemStack.cpp  itemType.cpp
src/language/: language.cpp  localizedString.cpp  multiLocalizedString.cpp
